tests/baselines/reference/parserES5ForOfStatement3(target=es5).errors.txt
parserES5ForOfStatement3.ts(1,13): error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
parserES5ForOfStatement3.ts(1,18): error TS2304: Cannot find name 'X'.


==== parserES5ForOfStatement3.ts (2 errors) ====
    for (var a, b of X) {
                ~
!!! error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
                     ~
!!! error TS2304: Cannot find name 'X'.
    }